<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:padding="16dp"
android:background="@drawable/dialog">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/order_food_list"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="#000"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"/>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/food_recycler"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"/>


<EditText
    android:id="@+id/notes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:hint="@string/notes"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp" />

<com.google.android.material.chip.ChipGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="horizontal">

    <com.google.android.material.chip.Chip
        android:id="@+id/pepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepper"/>
    <com.google.android.material.chip.Chip
        android:id="@+id/sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"/>

</com.google.android.material.chip.ChipGroup>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/cancel"
        android:padding="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/send_order"
        android:padding="4dp"
        android:textStyle="bold"/>

</LinearLayout>
</LinearLayout>