<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_cancel"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/no"
            android:padding="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/yes"
            android:padding="4dp"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>