<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@color/colorPrimary"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_marginEnd="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fist_name"
                android:inputType="textCapWords"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0.5dp"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_waiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/waiter"
                    android:layout_marginEnd="8dp" />
                <RadioButton
                    android:id="@+id/rb_cook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/cook"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        app:cornerRadius="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        style="@style/Widget.MaterialComponents.Button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>