<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:src="@drawable/orders_processed"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginTop="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                app:cornerRadius="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                style="@style/Widget.MaterialComponents.Button"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/new_user"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>